Selectively integrate post-Flattening changes and add LICENSE.md from upstream

--- a/assets/minecraft/mcpatcher/color.properties
+++ b/assets/minecraft/mcpatcher/color.properties
@@ -1,1 +1,7 @@
 lilypad=6aef3f
+
+screen.loading=222222
+screen.loading.bar=111111
+screen.loading.outline=000000
+screen.loading.progress=dd4f3b
+screen.loading.blend=off
